syntax = "proto3";

package logger.v1;

import "common/v1/common.proto";
import "common/v1/enum_log.proto";
import "validate/validate.proto";

option go_package = "logger/v1;loggerv1";

// 行为日志
service Logger {
  // 增加日志事件
  rpc Create(CreateReq) returns (CreateRes);
  // 批量增加日志事件
  rpc BatchCreate(BatchCreateReq) returns (BatchCreateRes);
  // 批量增加日志ByTargetUids
  rpc BatchCreateByTargetUids(BatchCreateByTargetUidsReq) returns (BatchCreateByTargetUidsRes);
  // 显示日志列表
  rpc ListPage(ListPageReq) returns (ListPageRes);
  // 显示日志列表
  rpc ListEventAndGroup(ListEventAndGroupReq) returns (ListEventAndGroupRes);
}

// 创建
message CreateReq {
  // Event
  common.v1.LOG.EVENT event = 1;
  // Group
  common.v1.LOG.GROUP group = 2;
  // 目标uid
  int64 target_uid = 3;
  // 用户uid
  int64 operate_uid = 4;
  // space
  string space_guid = 6;
  // space group
  string space_group_guid = 7;
  // file guid
  string file_guid = 8;
  // role id
  int64 role_id = 9;
  // metadata
  string metadata = 10;
}

// 创建通知响应
message CreateRes {}

// 创建
message BatchCreateReq {
  // 列表
  repeated CreateReq list = 1;
}

// 创建通知响应
message BatchCreateRes {}

// 创建
message BatchCreateByTargetUidsReq {
  // Event
  common.v1.LOG.EVENT event = 1;
  // Group
  common.v1.LOG.GROUP group = 2;
  // 目标uid
  repeated int64 target_uids = 3;
  // 用户uid
  int64 operate_uid = 4;
  // space
  string space_guid = 6;
  // space group
  string space_group_guid = 7;
  // file guid
  string file_guid = 8;
  // role id
  int64 role_id = 9;
  // metadata
  string metadata = 10;
}

// 创建通知响应
message BatchCreateByTargetUidsRes {}

message ListPageReq {
  // 操作者UID
  int64 operate_uid = 1;
  // i18n
  string i18n = 3;
  // 分页
  common.v1.Pagination pagination = 4;
  // 事件
  common.v1.LOG.EVENT search_event = 5;
  // 搜索分组
  common.v1.LOG.GROUP search_group = 6;
  // 搜索分组uid
  int64 search_operate_uid = 7;
  // 搜搜目标id
  int64 search_target_uid = 8;
}

message LogInfo {
  // 日志id
  int64 id = 1;
  // 事件名
  string event_name = 2;
  // 分组名
  string group_name = 3;
  // 显示的一些信息，这个是需要国际化的
  string message = 4;
  // 操作人uid
  int64 operate_uid = 5;
  // 操作名称
  string operate_name = 6;
  // 操作图表
  string operate_avatar = 7;
  // 目标uid
  int64 target_uid = 8;
  // 目标名称
  string target_name = 9;
  // 目标头像
  string target_avatar = 10;
  // 创建时间
  int64 ctime = 11;
}

message ListPageRes {
  // 日志列表
  repeated LogInfo list = 1;
  // 分页
  common.v1.Pagination pagination = 2;
}

message ListEventAndGroupReq {
  // 操作者UID
  int64 operate_uid = 1;
  // i18n
  string i18n = 3;
}

message EventInfo {
  // 事件
  common.v1.LOG.EVENT event = 1;
  // 名称
  string name = 2;
}

message GroupInfo {
  // 分组
  common.v1.LOG.GROUP group = 1;
  // 名称
  string name = 2;
}

message ListEventAndGroupRes {
  // 事件列表
  repeated EventInfo eventList = 1;
  // 分组列表
  repeated GroupInfo groupList = 2;
}
